objects/hed__Term_Grade__c.object
<CustomObject>
    <description>Stores student grades for a specific grading period within a Term.</description>
    <label>Term Grade</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>Term Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates in which Term the student earned this grade.</description>
        <inlineHelpText>Indicates in which Term the student earned this grade.</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Result__c</fullName>
        <description>The result of the student&apos;s performance for this grading period.</description>
        <inlineHelpText>The result of the student&apos;s performance for this grading period.</inlineHelpText>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student for whom the grade is being recorded. When left blank, Contact autopopulates from the valid Course Connection on save.</description>
        <inlineHelpText>The student for whom the grade is being recorded. When left blank, Contact autopopulates from the valid Course Connection on save.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Letter_Grade__c</fullName>
        <description>If your school uses letter grades, enter the letter grade the student earned, for example, A, B, C, etc.</description>
        <inlineHelpText>If your school uses letter grades, enter the letter grade the student earned, for example, A, B, C, etc.</inlineHelpText>
        <label>Letter Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Percent_Grade__c</fullName>
        <description>If your school grades on a percentage basis, enter the percentage grade the student earned.</description>
        <inlineHelpText>If your school grades on a percentage basis, enter the percentage grade the student earned.</inlineHelpText>
        <label>Percent Grade</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <description>The number of credits the student earned this term for this course.</description>
        <inlineHelpText>The number of credits the student earned this term for this course.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering associated with the grade being recorded. When left blank, Course Offering autopopulates from the valid Course Connection on save.</description>
        <inlineHelpText>The Course Offering associated with the grade being recorded. When left blank, Course Offering autopopulates from the valid Course Connection on save.</inlineHelpText>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Numerical_Grade__c</fullName>
        <description>If your school uses numeric grades, enter the numeric grade the student earned.</description>
        <inlineHelpText>If your school uses numeric grades, enter the numeric grade the student earned.</inlineHelpText>
        <label>Numerical Grade</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Term_Grade_Type__c</fullName>
        <description>The type of grading period that this grade is for, for example, Mid-Term Grade, Final Grade, Exam Grade, Grading Period.</description>
        <inlineHelpText>The type of grading period that this grade is for, for example, Mid-Term Grade, Final Grade, Exam Grade, Grading Period.</inlineHelpText>
        <label>Term Grade Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exam Grade</fullName>
                </value>
                <value>
                    <fullName>Final Grade</fullName>
                </value>
                <value>
                    <fullName>Grading Period</fullName>
                </value>
                <value>
                    <fullName>Mid-Term Grade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class in which the student received this grade. The Contact and Course Offering on Term Grade must match the Contact and Course Offering on the Course Connection record.</description>
        <inlineHelpText>The class in which the student received this grade. The Contact and Course Offering on Term Grade must match the Contact and Course Offering on the Course Connection record.</inlineHelpText>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <description>The number of credits available this Term for this Course.</description>
        <inlineHelpText>The number of credits available this Term for this Course.</inlineHelpText>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>